--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "~6.5.0",
     "cssnano": "~3.7.0",
 
-    "node-normalize-scss": "~1.3.2"
+    "node-normalize-scss": "~1.3.2",
+    "include-media": "~1.4.8"
   }
 }
